src/main/default/objects/Product2/fields/Average_Fuel_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Average_Fuel_Consumption__c</fullName>
    <label>Average Fuel Consumption</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>