src/main/default/objects/Product2/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <label>Brands</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>carBrand</valueSetName>
    </valueSet>
</CustomField>