src/main/default/objects/Product2/fields/Cylinder_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Cylinder_Capacity__c</fullName>
    <label>Cylinder Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>