src/main/default/objects/Product2/fields/Fuel_Consumption_In_The_City__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Consumption_In_The_City__c</fullName>
    <label>Fuel Consumption In The City</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>