src/main/default/objects/Product2/fields/Horsepower__c.field-meta.xml
<CustomField>
    <fullName>Horsepower__c</fullName>
    <label>Horsepower</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>