src/main/default/objects/Product2/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>