src/main/default/objects/Product2/fields/Production_Year__c.field-meta.xml
<CustomField>
    <fullName>Production_Year__c</fullName>
    <label>Production Year</label>
    <type>Date</type>
</CustomField>