src/main/default/objects/Product2/fields/Top_Speed__c.field-meta.xml
<CustomField>
    <fullName>Top_Speed__c</fullName>
    <label>Top Speed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>